history section UI done with few issues like not showing decimal paid amount in list and print functionality

--- a/PbdWeb/client/main.css
+++ b/PbdWeb/client/main.css
@@ -381,3 +381,48 @@ table.tbl > tbody > tr.row-selectable:hover {
 	border: 1px solid #aaa;
 	color: #333;
 }
+
+.history-details {
+	height: 100%;
+	padding-top: 15px; 
+	padding-bottom: 15px;
+	overflow-y: auto;
+}
+
+.task-details-block, .followUp-details-block {
+	height: 100%;
+	display: flex;
+	align-items: center;
+	padding-left: 20px;
+	flex-direction: column;
+}
+
+.receipt-details-block {
+	box-shadow: 1px 1px 5px #aaa;
+	padding: 20px;
+	text-align: center;
+	color: #555;
+	margin-bottom: 20px;
+}
+
+.small-text {
+	font-size: small;
+}
+
+.receipt-details-table {
+	width: 100%;
+	margin-top: 10px; 
+}
+
+.receipt-details-table > tbody > tr > td {
+	border-bottom: 1px solid #ddd;
+}
+
+.receipt-details-table > tbody > tr > td:first-child {
+	text-align: left;
+}
+
+.receipt-details-table > tbody > tr > td:nth-child(2) {
+	text-align: right;
+	color: #000;
+}
